# pathhap

./: .gitignore  Cargo.toml  README.md
scripts/: test.job  test_script.ipynb
scripts/.ipynb_checkpoints/: test_script-checkpoint.ipynb
src/: em_progressive.rs  exact_phase.rs  lib.rs  markov_model.rs
src/clustering/: graph_traversal.rs  model.rs
src/clustering/phasing/: mod.rs  xlogx.rs
src/exact_phase/: graph_traversal.rs  haplotyping.rs  mod.rs  model.rs  phasing.rs
tests/: graphhap.rs
