[package]
name = "path_phasing"
version = "0.1.0"
authors = ["Bansho MASUTANI <banmasutani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "*"
log = "*"
env_logger = "*"
rayon = "*"
rand = "*"
rand_xoshiro = "*"
graycode = {path = "gray_code"}